--- a/public/css/main.css
+++ b/public/css/main.css
@@ -31,3 +31,10 @@ footer
 	width: 100%;
 	height: 600px;
 }
+
+#menu .navbar-item {
+	position: relative;
+}
+/* #menu .navbar-item {
+	position: relative;
+} */
