--- a/templates/public/panier.html.twig
+++ b/templates/public/panier.html.twig
@@ -28,7 +28,7 @@
                         <div class="row">
                             <input id="q{{ panier.id }}" class="text-center form-control col-4 offset-2 col-form-label" type="number" value="{{ panier.quantite }}" min="0" max="{{ panier.produit.stock }}">
                             <div class="col-4">
-                                <button id="m{{ panier.id }}" class="btn btn-warning"><i class="fas fa-edit"></i></button>
+                                <button id="m{{ panier.id }}" class="edit-order btn btn-warning"><i class="fas fa-edit"></i></button>
                             </div>
                         </div>
                     </td>
