--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -18,8 +18,8 @@
     <label for="inputPassword" class="sr-only">Password</label>
     <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
+    <input  type="hidden" name="_csrf_token"
+            value="{{ csrf_token('authenticate') }}"
     >
 
     {#
@@ -34,7 +34,7 @@
     #}
 
     <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+        Log In
     </button>
 </form>
 {% endblock %}
