--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,17 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+
+		{% for type, messages in app.session.flashbag.all() %}
+			{% for message in messages %}
+				<div id="flash-{{ type }}" class="alert alert-{{ type }} alert-dismissible" role="alert">
+					<button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span
+							class="sr-only">Close</span></button>
+					{{ message | raw }}
+				</div>
+			{% endfor %}
+		{% endfor %}
+
 		<header class="row">
 			<div class="col-md-3">
 				<img src="{{ asset('img/logo.png') }}" alt="mon logo" class="img-fluid">
